# JPEG-LS

./: .cproject  .project  CMakeLists.txt  HOW_TO_BUILD.txt  README.md  TODO  jpegls_mangle.h.in
src/: CMakeLists.txt  bitio.c  bitio.h  decoder.c  encoder.c  global.c  global.h  initialize.c  jpegmark.c  jpegmark.h  lossless_d.c  lossless_e.c  lossy_d.c  lossy_e.c  melcode.c
